atualizado estrutura do projeto, novos endpoints

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,13 @@ services:
       - 27017:27017
     volumes:
       - ./db:/data/db
+
   app:
     depends_on:
       - mongodb
     image: backend-node
+    volumes:
+      - ./:/app
     ports:
       - 3000:3000
     env_file:
