--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "mongoose": "^8.3.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
+    "globals": "^15.3.0",
     "nodemon": "^3.1.0"
   }
 }
